added dice functions

--- a/Dice-Game /index.html
+++ b/Dice-Game /index.html
@@ -9,16 +9,14 @@
 <body>
     <div id="container">
         <h1>Dice Roller</h1>
-        <div id="dice container">
+        <div id="dice-container">
             <img src="1dice.svg" alt="Dice 1" id="diceresult" width="200" height="auto">
             <br>
             <p>Press Button for a random dice Roll</p>
-            <button id="rollDice" onclick="rollDice()">Roll Dice</button>
-            <button id="reset" onclick="reset()"> Reset</button>
+            <button id="rollDice" onclick="rollDiceFunction()">Roll Dice</button>
+            <button id="reset" onclick="reset()">Reset</button>
         </div>
     </div>
-
-
     <script src="script.js"></script>
 </body>
 </html>
